tests/semantic/invalid/variable_declaration_mismatch_type.c
/*
 * Multi-line comment.
 */
extern int32_t a;
extern int64_t a;